--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -128,11 +128,101 @@
             
             @import "search";
         }
+        .wrapper {
+            .frontpage-template {
+                max-width: 860px;
+                width: 100%;
+                > ul {
+                    list-style-type: none;
+                    overflow: hidden;
+                    padding-left: 0;
+                    padding-top: 10px;
+    
+                    > li {
+                        box-sizing: border-box;
+                        padding: 30px 30px 0 0;
+                        min-height: 120px;
+                        width: 100%;
+                        display: block;
+                        margin-bottom: 30px;
+                        position: relative;
+
+                        &:nth-child(odd) {
+                            clear: left;
+                        }
+                        ul {
+                            list-style-type: none;
+                            overflow: hidden;
+                            padding-left: 0;
+                            position: absolute;
+                            left:1px;
+                            top: 0px;
+                            li {
+                                display: inline-block;
+                                height: 25px;
+                                padding-left: 1px;
+                                font-size: 25px;
+                                font-family: "FontAwesome";
+                                color: #acd036;
+                            }
+                        }
+                    }
+                }
+    
+                .fp-para-frame {                
+                    > div {
+                        padding: 15px;
+                        background-color: rgba(122,155,44,0.5);
+                    }
+                    a, a:visited {
+                        color: #222;
+                        text-decoration: underline;
+                        &:hover {
+                            color: $silver;
+                        }
+                    }
+                }
+    
+                p {
+                    background-color: rgba(122,155,44,0.5);
+                    color: #222;
+                    display: block;
+                    padding: 15px;
+                    margin-bottom: 0;
+                    text-align: center;
+                }
+            }
+        }
+    }
+
+    @media (min-width: 768px) {
+        .content-section .wrapper .frontpage-template {
+            > ul {
+                > li {
+                    float: left;
+                    width: 50%;
+                }
+            }
+            .fp-para-frame {                
+                > div {
+                    padding: 30px 50px;
+                    background-color: rgba(122,155,44,0.5);
+                }
+            }
+            p {
+                padding: 40px 70px;
+            }
+        }
     }
 
     @media (max-width: 1280px) {
       .content-section .wrapper .content {
           width: calc(100% - 420px);
+      }
+      .content-section .wrapper .frontpage-template {
+          width: calc(100% - 350px);
+          box-sizing: border-box;
+          padding-right: 40px;
       }
       .content-section .wrapper #toc {
         display: none;
