Changed default navigation to right. and adjusted scaling properties.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <p id="baseUrl" style="display: none">{{ site.github.url }}</p>
 <section class="content-section">
     <div class="wrapper page-title-{{ page.title }}">
-        <div id="resizable-navigation" class="navigation-control-placeholder float-left">
+        <div id="resizable-navigation-right" class="navigation-control-placeholder float-right">
             <div class="navigation">
                 {% include nav.html %}
 
