--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -40,16 +40,9 @@
         }
     }
 
-    #resizable-navigation-right {
-        .navigation-control {
-            right: auto;
-            left: 0;
-        }
+    #resizable-navigation {
         .navigation {
-            margin-right: 0;
-            margin-left: auto;
             nav {
-                padding-top: 40px;
                 box-sizing: border-box;
             }
             li {
@@ -83,19 +76,7 @@
                 content: "\f107"
             }
         }
-        .ui-resizable-w {
-            width: 20px;
-            left: -5px;
-        }
-        &.resizing {
-            .navigation {
-                border-right: 0;
-                border-left: $navigation-border-right solid $blue;
-                box-shadow: -5px 0px 5px 0px $blue !important;
-                -webkit-animation: border-pulsate-right 4s infinite;
-                animation: border-pulsate-right 4s infinite;
-            }
-        }
+
         .navigation-open, .active {
             background-color: #252525;
             > ul {
