--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -138,8 +138,7 @@
     
                     > li {
                         box-sizing: border-box;
-                        padding: 30px 30px 0 0;
-                        min-height: 120px;
+                        padding: 30px 30px 0px 0;
                         width: 100%;
                         display: block;
                         margin-bottom: 30px;
