--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -54,12 +54,29 @@
                     width: calc(100% - (34px));
                 }
 
-                ul li a:only-child {
-                    padding-left: 44px;
-                    text-transform: capitalize;
-                }
-                &:hover {
-                    background-color: #252525;
+                ul {
+                    li, .navigation-closed, .navigation-open {
+                        span {
+                            padding-left: 19px;
+                        }
+                        .navigation-icon + a {
+                            width: calc(100% - (50px));
+                            text-transform: capitalize;
+                        }
+                        a:only-child {
+                            padding-left: 44px;
+                            text-transform: capitalize;
+                        }
+                        &:hover {
+                            background-color: #252525;
+                        }
+                        li {
+                            a:only-child {
+                                padding-left: 54px;
+                                text-transform: capitalize;
+                            }
+                        }
+                    }
                 }
             }
             .navigation-icon, .navigation-icon-placeholder {
