--- a/_includes/head.html
+++ b/_includes/head.html
@@ -56,6 +56,10 @@
             ga('create','UA-11260761-14','auto');ga('send','pageview');
         </script>
 
+        <!-- SumoMe analytics -->
+        <script src="//load.sumome.com/" data-sumo-site-id="1a67894c5ee565b50999f096f6e822cb762374c5120950a23fd150360687bbd6" async="async"></script>
+
+        <!-- table of context -->
         <script type="text/javascript">
           $(document).ready(function() {
             $('#toc').toc();
